--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script src="./p5/code/p5.js"></script>
-    <script src="./p5/code/p5js-svg.js"></script>
+<!doctype html>
+<html lang="zh">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+<title>SVG Physics Tilt</title>
 
-    <script src="./sketch-utils.js"></script>
-    <script src="./sketch.js"></script>
+<style>
+html, body {
+  margin:0;
+  padding:0;
+  overflow:hidden;
+  background:#ffffff;
+}
+canvas { display:block; }
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <main></main>
-  </body>
+#motionBtn{
+  position: fixed;
+  left: 12px;
+  top: 12px;
+  z-index: 9999;
+  padding: 10px 12px;
+  border-radius: 12px;
+  border: 1px solid rgba(255,255,255,.6);
+  background: rgba(0,0,0,.45);
+  color: #fff;
+  font: 14px/1.2 system-ui;
+}
+</style>
+</head>
 
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    canvas {
-      display: block;
-    }
-  </style>
+<body>
+<button id="motionBtn">启用手机倾斜</button>
+
+<script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+<script src="sketch.js"></script>
+</body>
 </html>
