--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ html, body {
   margin:0;
   padding:0;
   overflow:hidden;
-  background:#ffffff;
+  background:#fff;
 }
 canvas { display:block; }
 
@@ -19,11 +19,11 @@ canvas { display:block; }
   left: 12px;
   top: 12px;
   z-index: 9999;
-  padding: 10px 12px;
-  border-radius: 12px;
-  border: 1px solid rgba(255,255,255,.6);
-  background: rgba(0,0,0,.45);
-  color: #fff;
+  padding: 14px 14px;          /* 做大一点，更好点 */
+  border-radius: 14px;
+  border: 1px solid rgba(0,0,0,.2);
+  background: rgba(255,255,255,.9);
+  color: #000;
   font: 14px/1.2 system-ui;
 }
 </style>
@@ -37,3 +37,4 @@ canvas { display:block; }
 <script src="sketch.js"></script>
 </body>
 </html>
+
